JavaFX Implemented :)